<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/linear_layout_id_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/location_img" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="2dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:text="Enugu" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_weather_condition"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="40dp"
        android:scaleType="centerCrop"
        android:src="@drawable/sunny"
        app:layout_constraintBottom_toTopOf="@id/temperature_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/temperature_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/weather_description_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="24\u2103" />

    <TextView
        android:id="@+id/weather_description_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/date_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Sunny" />

    <TextView
        android:id="@+id/date_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/linear_layout_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Monday, 15 october" />

    <LinearLayout
        android:id="@+id/linear_layout_id"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/curved_background"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="10dp"
                android:src="@drawable/humidity_img" />

            <TextView
                android:id="@+id/humidity_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_20"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/humidity"
                android:textSize="20sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="10dp"
                android:src="@drawable/wind_img" />

            <TextView
                android:id="@+id/wind_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="5 km/hrs"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/wind"
                android:textSize="20sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:scaleX="1"
                android:scaleY="1"
                android:src="@drawable/sunset" />

            <TextView
                android:id="@+id/sunset_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/_9_20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/sunset"
                android:textSize="20sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:scaleX="1"
                android:scaleY="1"
                android:src="@drawable/sunrise_main" />

            <TextView
                android:id="@+id/sunrise_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="6:00" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/sunrise"
                android:textSize="20sp"
                android:textStyle="normal" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>